--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,126 +1,93 @@
-@keyframes ldio-z4gvxa1yc9k {
-  0% {
-    transform: rotate(0)
-  }
-
-  100% {
-    transform: rotate(360deg)
-  }
+@keyframes ldio-cxltotke42s {
+  0% { transform: rotate(0) }
+  100% { transform: rotate(360deg) }
 }
-
-.loadingio-spinner-double-ring-2sa6ig6js6 {
-  margin: auto;
-}
-
-.ldio-z4gvxa1yc9k div {
-  box-sizing: border-box !important
-}
-
-.ldio-z4gvxa1yc9k>div {
+.ldio-cxltotke42s div { box-sizing: border-box!important }
+.ldio-cxltotke42s > div {
   position: absolute;
-  width: 72px;
-  height: 72px;
-  top: 64px;
-  left: 64px;
+  width: 70px;
+  height: 70px;
+  top: 65px;
+  left: 65px;
   border-radius: 50%;
-  border: 8px solid #000;
-  border-color: #e15b64 transparent #e15b64 transparent;
-  animation: ldio-z4gvxa1yc9k 2s linear infinite;
+  border: 6px solid #000;
+  border-color: #ecf1c1 transparent #ecf1c1 transparent;
+  animation: ldio-cxltotke42s 2.0408163265306123s linear infinite;
 }
 
-.ldio-z4gvxa1yc9k>div:nth-child(2),
-.ldio-z4gvxa1yc9k>div:nth-child(4) {
-  width: 52px;
-  height: 52px;
-  top: 74px;
-  left: 74px;
-  animation: ldio-z4gvxa1yc9k 2s linear infinite reverse;
+.ldio-cxltotke42s > div:nth-child(2), .ldio-cxltotke42s > div:nth-child(4) {
+  width: 54px;
+  height: 54px;
+  top: 73px;
+  left: 73px;
+  animation: ldio-cxltotke42s 2.0408163265306123s linear infinite reverse;
 }
-
-.ldio-z4gvxa1yc9k>div:nth-child(2) {
-  border-color: transparent #f8b26a transparent #f8b26a
+.ldio-cxltotke42s > div:nth-child(2) {
+  border-color: transparent #a0a485 transparent #a0a485
 }
-
-.ldio-z4gvxa1yc9k>div:nth-child(3) {
-  border-color: transparent
-}
-
-.ldio-z4gvxa1yc9k>div:nth-child(3) div {
+.ldio-cxltotke42s > div:nth-child(3) { border-color: transparent }
+.ldio-cxltotke42s > div:nth-child(3) div {
   position: absolute;
   width: 100%;
   height: 100%;
   transform: rotate(45deg);
 }
-
-.ldio-z4gvxa1yc9k>div:nth-child(3) div:before,
-.ldio-z4gvxa1yc9k>div:nth-child(3) div:after {
+.ldio-cxltotke42s > div:nth-child(3) div:before, .ldio-cxltotke42s > div:nth-child(3) div:after { 
   content: "";
   display: block;
   position: absolute;
-  width: 8px;
-  height: 8px;
-  top: -8px;
-  left: 24px;
-  background: #e15b64;
+  width: 6px;
+  height: 6px;
+  top: -6px;
+  left: 26px;
+  background: #ecf1c1;
   border-radius: 50%;
-  box-shadow: 0 64px 0 0 #e15b64;
+  box-shadow: 0 64px 0 0 #ecf1c1;
+}
+.ldio-cxltotke42s > div:nth-child(3) div:after {
+  left: -6px;
+  top: 26px;
+  box-shadow: 64px 0 0 0 #ecf1c1;
 }
 
-.ldio-z4gvxa1yc9k>div:nth-child(3) div:after {
-  left: -8px;
-  top: 24px;
-  box-shadow: 64px 0 0 0 #e15b64;
-}
-
-.ldio-z4gvxa1yc9k>div:nth-child(4) {
-  border-color: transparent;
-}
-
-.ldio-z4gvxa1yc9k>div:nth-child(4) div {
+.ldio-cxltotke42s > div:nth-child(4) { border-color: transparent; }
+.ldio-cxltotke42s > div:nth-child(4) div {
   position: absolute;
   width: 100%;
   height: 100%;
   transform: rotate(45deg);
 }
-
-.ldio-z4gvxa1yc9k>div:nth-child(4) div:before,
-.ldio-z4gvxa1yc9k>div:nth-child(4) div:after {
+.ldio-cxltotke42s > div:nth-child(4) div:before, .ldio-cxltotke42s > div:nth-child(4) div:after {
   content: "";
   display: block;
   position: absolute;
-  width: 8px;
-  height: 8px;
-  top: -8px;
-  left: 14px;
-  background: #f8b26a;
+  width: 6px;
+  height: 6px;
+  top: -6px;
+  left: 18px;
+  background: #a0a485;
   border-radius: 50%;
-  box-shadow: 0 44px 0 0 #f8b26a;
+  box-shadow: 0 48px 0 0 #a0a485;
 }
-
-.ldio-z4gvxa1yc9k>div:nth-child(4) div:after {
-  left: -8px;
-  top: 14px;
-  box-shadow: 44px 0 0 0 #f8b26a;
+.ldio-cxltotke42s > div:nth-child(4) div:after {
+  left: -6px;
+  top: 18px;
+  box-shadow: 48px 0 0 0 #a0a485;
 }
-
-.loadingio-spinner-double-ring-2sa6ig6js6 {
+.loadingio-spinner-double-ring-pugumzivu3n {
   width: 200px;
   height: 200px;
+  margin: auto;
   display: inline-block;
   overflow: hidden;
-  background: transparent;
+  background: #transparent;
 }
-
-.ldio-z4gvxa1yc9k {
+.ldio-cxltotke42s {
   width: 100%;
   height: 100%;
   position: relative;
   transform: translateZ(0) scale(1);
   backface-visibility: hidden;
-  transform-origin: 0 0;
-  /* see note above */
+  transform-origin: 0 0; /* see note above */
 }
-
-.ldio-z4gvxa1yc9k div {
-  box-sizing: content-box;
-}
+.ldio-cxltotke42s div { box-sizing: content-box; }
