--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,3 +1,11 @@
-.toggle-planet {
-  margin-bottom: 2rem;
+.button-row {
+  margin: 0 0 1rem;
+}
+
+.button-row button {
+  margin-right: 1rem;
+}
+
+.stardb-app .row {
+  margin-bottom: 1rem;
 }
